INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}../) 

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/client)
INCLUDE_DIRECTORIES(/usr/include/jsoncpp)
 

ADD_EXECUTABLE(tc-client tc-client.cc)
ADD_EXECUTABLE(tc-upload tc-upload.cc)

TARGET_LINK_LIBRARIES(tc-upload pthread)